--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,11 @@
 {
   "presets": [
-    ["@babel/preset-env", {
-      "targets": {
-        "browsers": ["last 2 versions", "safari >= 7"]
-      }
-    }]
+    "react",
+    "env"
+  ],
+  "plugins": [
+    ["transform-object-rest-spread", { "useBuiltIns": true }],
+    "transform-function-bind",
+    "transform-class-properties"
   ]
 }
